--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
             margin-right: 8px;
         }
     </style>
+   <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FR6294X97P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      
+      gtag('config', 'G-FR6294X97P');
+    </script>
 </head>
 <body>
     <div class="container">
